[package]
name = "rndz"
version = "0.1.5"
edition = "2021"
description = "A simple rendezvous protocol implementation to help with NAT traversal or hole punchin"
repository = "https://github.com/optman/rndz"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
# 
#

[build-dependencies]
protobuf-codegen = "3.7.1"

[features]
default = ["client", "server", "async", "env_logger", "structopt"]
server = ["tokio"]
async = ["tokio"]
client = []

[dependencies]
log = { version = "0.4.22" }
env_logger = { version = "0.11.5", optional = true }
structopt = { version = "0.3.26", optional = true }
protobuf = "3.7.1"
socket2 = { version = "0.5.8", features = ["all"] }
tokio = { version = "1.42.0", features = ["full"], optional = true }
